@@ -125,6 +125,7 @@ Artem Makhutov
 
 Alwin Esch
   for adding XBMC support by extending VTP capabilities
+  for adding VDR 1.7.11 parental rating support for VTP LSTE command
 
 BBlack
   for reporting that updating recordings list on CmdPLAY is a bad idea
